# Solid-Matcha

./: .gitignore  README.md  _config.yml  index.html  login.html  pyproject.toml  run.sh  settings.html  statistic.html  template.md
.github/workflows/: run.yml
ai/: analyze_papers.py  enhance.py
assets/: file-list.txt
css/: settings.css  styles.css
daily_arxiv/: config.yaml
daily_arxiv/daily_arxiv/: check_stats.py
data/: 2026-01-30.jsonl  2026-01-30.md  2026-01-31.jsonl  2026-01-31.md  2026-01-31_AI_enhanced_English.jsonl  2026-02-01.jsonl  2026-02-01.md  2026-02-01_AI_enhanced_English.jsonl  2026-02-04.jsonl  2026-02-04.md  2026-02-04_AI_enhanced_English.jsonl  2026-02-05.jsonl  2026-02-05.md  2026-02-05_AI_enhanced_English.jsonl  2026-02-06.jsonl  2026-02-06.md  2026-02-07.jsonl  2026-02-07.md  2026-02-07_AI_enhanced_English.jsonl  2026-02-08.md  2026-02-09.jsonl  2026-02-09_AI_enhanced_English.jsonl  2026-02-10.md  2026-02-10_AI_enhanced_English.jsonl  2026-02-11.jsonl  2026-02-11.md  2026-02-11_AI_enhanced_English.jsonl  2026-02-12.jsonl  2026-02-12.md  2026-02-13.md  2026-02-13_AI_enhanced_English.jsonl  2026-02-14.md  2026-02-14_AI_enhanced_English.jsonl  2026-02-15.jsonl  2026-02-15_AI_enhanced_English.jsonl  2026-02-16.jsonl  2026-02-16.md  2026-02-16_AI_enhanced_English.jsonl  2026-02-17.jsonl  2026-02-17.md  (+179 more)
js/: app.js  auth-config.js  data-config.js  settings.js  statistic.js
