# Modified by JH 2026-03-20: renamed project, updated authors, LLM backend → Groq
[project]
name = "solid-matcha"
version = "0.1.0"
description = "Serverless daily arXiv tracker powered by Groq LLM"
authors = [
    {name = "Jonghwan Kim"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.3",
    "dotenv>=0.9.9",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.9",
    "scrapy>=2.12.0",
    "tqdm>=4.67.1",
]
license = "Apache-2.0"
